# conf-wms

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  init.sql  pyproject.toml  secrets.yaml
alembic/versions/: 1e255e637a9d_auto_generated_migration.py
app/: backend_pre_start.py
app/api/: main.py
app/crud/: base.py  (+2 more)
scripts/: prestart.sh
src/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 101c53e398bc_auto_generated_migration.py  12fc53ef97e5_auto_generated_migration.py  1c6096d807f1_auto_generated_migration.py  27b123411620_auto_generated_migration.py  3f2cf39bc4ce_auto_generated_migration.py  47fa10455828_auto_generated_migration.py  604376d66837_auto_generated_migration.py  f0ce0bfbd675_auto_generated_migration.py  f7012456cde5_auto_generated_migration.py  fd2a6e306086_auto_generated_migration.py
src/app/: dependencies.py  main.py
src/app/api/: deps.py  main.py
src/app/api/routers/: __init__.py  auth.py  institutions.py  users.py
src/app/core/: config.py  security.py
src/app/crud/: base.py  crud_institution.py  crud_user.py
src/app/data/: models.py  schemas.py
src/app/db/: base.py  init_db.py
src/app/models/: institution.py  user.py
src/app/routers/: auth.py  users.py
src/app/schemas/: __init__.py  institution.py  user.py
src/scripts/: prestart.sh
src/tests/: __init__.py  conftest.py  new_model_test.py  new_model_testing.py  test_auth.py  test_institution.py  test_users.py
tests/: conftest.py  test_institution.py  test_users.py
(+5 files in other folders)
